<resources>
    <!-- COLORES -->
    <color name="black">#000000</color>
    <color name="white">#FFFFFF</color>
    <color name="purple">#BB86FC</color>
    <color name="gray">#808080</color>
    <!-- STRINGS -->
    <string name="app_title">Fall Detection</string>
    <string name="init_values">Collecting Data...</string>
    <string name="send_alert">Send Alert!</string>
    <string name="contacts">Add Contacts</string>
    <string name="chip_placeholder">Chip Placeholder</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="save">Save</string>
    <string name="fall_detected">A fall was detected! Send alert?</string>
</resources>