<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/alertRoot"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="20sp"
        android:layout_marginTop="25dp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:text="@string/app_title" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="15sp"
        android:layout_marginTop="5dp"
        android:textColor="@color/white"
        android:text="@string/fall_detected"
        android:gravity="center_horizontal"/>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:progressTint="@color/purple"
        android:progressBackgroundTint="@color/gray"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal">

        <Button
            android:id="@+id/acceptAlert"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/rounded_button"
            android:text="@string/accept"/>

        <Button
            android:id="@+id/declineAlert"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:background="@drawable/rounded_button"
            android:text="@string/decline"/>
    </LinearLayout>
</LinearLayout>