<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/root"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/black">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="20sp"
        android:layout_marginTop="25dp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:text="@string/app_title" />
    
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/sendAlertBtn"
                        android:layout_width="170dp"
                        android:layout_height="40dp"
                        android:layout_marginTop="3dp"
                        android:background="@drawable/rounded_button"
                        android:text="@string/send_alert"/>

                    <Button
                        android:id="@+id/contactsBtn"
                        android:layout_width="170dp"
                        android:layout_height="40dp"
                        android:layout_marginTop="3dp"
                        android:background="@drawable/rounded_button"
                        android:text="@string/contacts"/>

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recycler_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                        android:nestedScrollingEnabled="false">

                    </androidx.recyclerview.widget.RecyclerView>

                </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</LinearLayout>